tests/paczka1/small_fuzzy/80994574.err
Error in line 2: S41 S763 44,6
Error in line 10: 908X7aJZ S41 89,08
Error in line 3: SDOC0 S41 47,2
Error in line 14: v75dT S41 460,77
